--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="css/solid.min.css" rel="stylesheet" />
+    <link href="/css/solid.min.css" rel="stylesheet" />
     <title>Git Repo Browser</title>
   </head>
   <body>
